plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.0.170'
    id "me.modmuss50.mod-publish-plugin" version "0.8.4"
}

boolean enableJEI = true
boolean enableEMI = false
boolean enableTFC = false
boolean enableREI = false

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

//minecraft.accessTransformer.file = rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')

runs {
    configureEach {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'

        modSource project.sourceSets.main
    }

    client {
        systemProperty 'forge.enabledGameTestNamespaces', mod_id
    }

    server {
        systemProperty 'forge.enabledGameTestNamespaces', mod_id
        programArgument '--nogui'
    }

    gameTestServer {
        systemProperty 'forge.enabledGameTestNamespaces', mod_id
    }

    data {

        arguments.addAll '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    flatDir {
        dir 'libs'
    }
    maven {
        url 'https://maven.blamejared.com'
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }
    maven {
        name 'CurseMaven'
        url 'https://cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }
    //maven {
    //    name 'NovaMachina Mods - Release'
    //    url 'https://dl.cloudsmith.io/public/novamachina-mods/release/maven/'
    //    content {
    //        includeGroup 'novamachina.novacore'
    //        includeGroup 'novamachina.exnihilosequentia'
    //    }
    //    mavenContent {
    //        releasesOnly()
    //    }
    //}
    maven {
        name 'Remplers Repo'
        url 'https://maven.rempler.com/releases/'
        content {
            includeGroup 'novamachina.novacore'
            includeGroup 'novamachina.exnihilosequentia'
        }
    }
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        name = "REI"
        url = "https://maven.architectury.dev/"
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    implementation "novamachina.novacore:NovaCore:3.0.1"
    implementation "novamachina.exnihilosequentia:ExNihiloSequentia:7.1.0"

    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    if (enableJEI) {
        localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    }

    compileOnly "curse.maven:tfc-302973:6187491"
    if (enableTFC) {
        localRuntime "curse.maven:tfc-302973:6187491"
        localRuntime "vazkii.patchouli:Patchouli:${minecraft_version}-84.1-FORGE"
    }

    compileOnly "dev.emi:emi-neoforge:${emi_version}+${minecraft_version}:api"
    if (enableEMI) {
        localRuntime "dev.emi:emi-neoforge:${emi_version}+${minecraft_version}"
    }

    compileOnly "dev.architectury:architectury-forge:9.2.14"
    compileOnly "me.shedaniel:RoughlyEnoughItems-forge:12.1.785"
    if (enableREI) {
        localRuntime "dev.architectury:architectury-forge:9.2.14"
        localRuntime "me.shedaniel:RoughlyEnoughItems-forge:12.1.785"
    }
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
            neo_version         : neo_version, neo_version_range: neo_version_range,
            loader_version_range: loader_version_range,
            mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors         : mod_authors, mod_description: mod_description,
            update_url          : update_url,
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
        maven {
            name = "RemplersRepo"
            url = "https://maven.rempler.com/releases/"
            credentials(PasswordCredentials)
            authentication {
                basic(BasicAuthentication)
            }
        }
    }
}

publishMods {
    file = jar.archiveFile
    type = STABLE
    modLoaders.add("neoforge")
    displayName = "${mod_name} ${mod_version}"
    changelog = ""

    modrinth {
        projectId = "DkBT4izI"
        accessToken = System.getenv("MODRINTH_KEY")
        minecraftVersions.add("1.21.1")
        requires{
            id = "WhVa4xyw"
        }
        optional {
            id = "JaCEZUhg"
            id = "u6dRKJwZ"
            id = "fRiHVvU7"
        }
    }

    curseforge {
        projectId = "1263595"
        accessToken = System.getenv("CURSEFORGE_KEY")
        minecraftVersions.add("1.21.1")
        clientRequired = true
        serverRequired = true
        requires("exnihilosequentia")
        optional("emi", "jei", "terrafirmacraft")
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}